--- a/public/index.html
+++ b/public/index.html
@@ -181,13 +181,13 @@ document.addEventListener("DOMContentLoaded", function() {
       <!--<br>-->
       <h3>Índice</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
-      <p style="margin-bottom: -10px"><a href="#casaERCP">Casa E.R.C.P.</a></p><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
-      <p style="margin-bottom: -10px"><a href="#casaJBRC">Casa J.B.R.C. </a></p><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
-      <p style="margin-bottom: -10px"><a href="#casaFG"> Casa F.G. </a></p><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
+      <p style="margin-bottom: -10px"><a href="#casaERCP">Telones</a></p><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
+      <p style="margin-bottom: -10px"><a href="#casaJBRC">Buque </a></p><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
+      <p style="margin-bottom: -10px"><a href="#casaFG"> Cuadra </a></p><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
       <p style="margin-bottom: -10px"><a href="#cute">Cute-chitecture </a></p> <!-- <br><a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> -->
-      <p style="margin-bottom: -10px"><a href="#edificioSCW">Edificio S.C.W. </a></p> <!--<br> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> -->
+      <p style="margin-bottom: -10px"><a href="#edificioSCW">Masoquismo de Código </a></p> <!--<br> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> -->
       <!--<p style="margin-bottom: -10px"><a href="#casaFV">Casa F.V. </a></p>--> <!--<br> <a href="#casaFV"> Texto </a> <br> <a href="#casaFV2"> Dibujos </a>-->
-      <p style="margin-bottom: -10px"><a href="#casaFKL">Casa F.K.L. </a></p> <!--<br> <a href="#casaFKL">Texto</a> <br><a href="#casaFKL2"> Dibujos </a> <br><a href="#casaFKL3"> Fotografías</a> <br><a href="#casaFKL4"> Videos </a> -->
+      <p style="margin-bottom: -10px"><a href="#casaFKL">Belle </a></p> <!--<br> <a href="#casaFKL">Texto</a> <br><a href="#casaFKL2"> Dibujos </a> <br><a href="#casaFKL3"> Fotografías</a> <br><a href="#casaFKL4"> Videos </a> -->
       <p style="margin-bottom: -10px"><a href="#creciendo">Creciendo en Público </a></p> <!--<br> <a href="#creciendo"> Newsletter Errático</a>-->
       <p style="margin-bottom: -10px"><a href="#erewhon">Erewhon </a></p> <!--<br> <a href="#erewhon"> Textos</a> <br><a href="#erewhon2"> Proposiciones</a> <br><a href="#erewhon3"> Dibujos </a> <br><a href="#erewhon4"> Imágenes</a>-->
       <p style="margin-bottom: -10px"><a href="#personajismo">Personajismo</a></p> <!--<br> <a href="#personajismo">Del Arquitecto-Estrella al Arquitecto-Constelación</a>-->
@@ -272,7 +272,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
     <div id="casaERCP" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <h3>Casa E.R.C.P.</h3>
+      <h3>Telones</h3>
       <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p><a href="#casaERCP2">Dibujos</a></p><p><a href="#casaERCP3">Fotografías x F.S.</a></p></div>
       <!--<br>-->
       <!--<hr>-->
@@ -372,12 +372,13 @@ Maecenas nec lobortis nunc.
   <div id="casaJBRC" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <h3>Casa J.B.R.C.</h3>
+      <h3>Buque</h3>
       <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p><a href="#casaJBRC2">Dibujos</a></p><p><a href="#casaJBRC3">Fotografías x S.G.</a></p><p><a href="#casaJBRC4">Series</a></p></div>
       <!--<br>-->
       <!--<hr>-->
-      <p>Una pareja de artistas nos contacta para “acondicionar” una propiedad que están pensando comprar. Al salir de la visita les decimos “La casa tiene mucho ruido. Hace falta crueldad.” El proceso de reconstrucción comenzó siendo una “lavada de cara”, siguió como una “refacción”, se volvió luego una “reforma integral” y culminó en “una casa nueva”. La estrategia fue simple, hacer subir desde el fondo lo que la arquitectura ya era: una casa 3 metros de ancho por un largo de 18 metros, desarrollada en vertical en tres niveles y varios desniveles, con el potencial de volverse un pequeño buque largo, esbelto y alto. Se demolió todo el ruido estilístico e innecesario: molduras, falsas vigas de madera, nichos, muros que sectorizaban los espacios según clichés absurdos, equipamiento no pensado para ser utilizado sino para representar un gusto poco refinado. Cuando solo quedaron las losas y sus desniveles, el patio en el fondo y un invernadero, se introdujo una escalera cuadrada en el medio de la casa que conecte cada uno de los desniveles generando un circuito que conecta espacios aislados con carácter y humores específicos.
-<br>
+      <p>Una pareja de artistas nos contacta para “acondicionar” una propiedad que están pensando comprar. Al salir de la visita les decimos “La casa tiene mucho ruido. Hace falta crueldad.” El proceso de reconstrucción comenzó siendo una “lavada de cara”, siguió como una “refacción”, se volvió luego una “reforma integral” y culminó en “una casa nueva”. La estrategia fue simple, hacer subir desde el fondo lo que la arquitectura ya era: una casa 3 metros de ancho por un largo de 18 metros, desarrollada en vertical en tres niveles y varios desniveles, con el potencial de volverse un pequeño buque: largo, esbelto y alto. Se demolió todo el ruido estilístico e innecesario: molduras, falsas vigas de madera, nichos, muros que sectorizaban los espacios según clichés absurdos, equipamiento no pensado para ser utilizado sino para representar un gusto poco refinado. Cuando solo quedaron el patio en el fondo y un invernadero y las losas y sus desniveles, se introdujo una escalera cuadrada en el medio de la casa que conecta cada uno de los desniveles generando un circuito de espacios separados con carácter y humores específicos.
+      </p>
+    <br>
         <br> Equipo: Manuel Mensa, Olivia Olivari
 </p>
       <!-- Add more content here if needed -->
@@ -462,12 +463,12 @@ Ritmo: Catalina Sfer Salas</p>
     <div id="casaFG" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <h3>Casa F.G.</h3>
+      <h3>Cuadra</h3>
       <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#casaFG2"><p>Dibujos</p></a><a href="#casaFG3"><p>Fotografías</p></a></div>
       <!--<br>-->
       <!--<hr>-->
-      <p>Un artista precisa una casa lo más pequeña posible. Quiere vivir en ella, pero también utilizarla como espacio de producción. La relación con la intemperie propone, tiene que ser más propia de quién la conoce y trabaja en ella que de quien la idealiza y la contempla. La casa se divide en tres bandas: un pasillo extra-grande central que además de conectar con las dos bandas laterales y permitir atravesar desde la galería de la entrada al lavadero del fondo, suceden las actividades de producción y de ocio. Una banda lateral ancha conforma una secuencia de habitaciones: cocina, baño, ducha, depósito, dormitorio. Cada habitación tiene una ventana hacia el exterior y una puerta hacia la banda central, con excepción del dormitorio: una puerta para cada lado de la cama permite maximizar el espacio. En la banda lateral angosta se forma una secuencia de nichos para equipamiento, intercalados por grandes ventanales que funcionan como pantallas que proyectan el jardín desde fuera.  </p>
-     <br>
+      <p>Un artista precisa una casa lo más pequeña posible. Quiere vivir en ella, pero también utilizarla como espacio de producción. La relación que propone con la intemperie, es más propia de quién la conoce y trabaja en ella que de quien la idealiza y la contempla. La casa se divide en tres bandas: un pasillo extra-grande central que además de conectar con las dos bandas laterales y permitir atravesar desde la galería de la entrada al lavadero del fondo, aloja las actividades de producción y de ocio. Una banda lateral ancha conforma una secuencia de habitaciones: cocina, baño, ducha, depósito, dormitorio. Cada habitación tiene una ventana hacia el exterior y una puerta hacia la banda central, con excepción del dormitorio: una puerta para cada lado de la cama permite maximizar el espacio. En la banda lateral angosta se forma una secuencia de nichos para equipamiento, intercalados por grandes vidrios que funcionan como pantallas que proyectan el jardín desde fuera. </p>
+      <br>
       <br>
       <p>Equipo: Manuel Mensa, Lucas Torres Agüero, Matías Etchart </p>
     </div>
@@ -593,7 +594,7 @@ Ritmo: Catalina Sfer Salas</p>
     <div id="edificioSCW" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <h3>Edificio S.C.W.</h3>
+      <h3>Masoquismo de Código</h3>
       <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#edificioSCW2"><p>Dibujos</p></a><a href="#edificioSCW3"><p>Imágenes</p></a></div>
       <!--<br>-->
       <!--<hr>-->
@@ -671,11 +672,11 @@ Maecenas nec lobortis nunc. </p>
     <div id="casaFKL" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <h3>Casa F.K.L.</h3>
+      <h3>Belle</h3>
       <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#casaFKL2"><p>Dibujos</p></a><a href="#casaFKL3"><p>Fotografías</p></a><a href="#casaFKL4"><p>Videos</p></a></div>
       <!--<br>-->
       <!--<hr>-->
-      <p>En toda arquitectura a reformar está el desafío de construir cada vez los criterios mediante los cuales se distingue lo valioso de lo dispensable. Una reforma en ese sentido es un simulacro explícito de lo que sucede en la práctica en general. La casa F.K.L es un edificio ubicado en una zona de Buenos Aires que tuvo su época dorada y pretende recuperarla. El criterio de una belle epoque no melancólica se vuelve central para la propuesta.</p>
+      <p>En toda arquitectura a reformar está el desafío de construir cada vez los criterios mediante los cuales se distingue lo valioso de lo dispensable. Una reforma en ese sentido es un simulacro explícito de lo que sucede en la práctica en general. Belle es un edificio ubicado en una zona de Buenos Aires que tuvo su época dorada y pretende recuperarla. El criterio de una belle epoque no melancólica se vuelve central para la propuesta.</p>
       <br>
       <br>
       <p>Equipo: Manuel Mensa, Nicolás Boscoboinik, Catalina Sfer Salas </p><!-- Add more content here if needed -->
