--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -247,8 +247,8 @@ Friedrich Nietzsche, La Gaya Ciencia </i></p>
 <p>It is not a question of the "best architecture", or the most virtuous architecture, for even in the best there is something that nauseates; and the best is still something that must be overcome! Architecture capable of becoming imperceptible
 
       <br>
-        <p>Texto: Manuel Mensa <br>
-Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato Di Tella. Atlas de Arquitectura Genérico Sublime (Archivos de Arquitectura). Buenos Aires: Escuela de Arquitectura y Estudios Urbanos, 2022.</i>
+        <p>Text: Manuel Mensa <br>
+Published in: <i>Plot 69 (Buenos Aires, 2023)</i> and in <i>Universidad Torcuato Di Tella. Atlas de Arquitectura Genérico Sublime (Archivos de Arquitectura). Buenos Aires: Escuela de Arquitectura y Estudios Urbanos, 2022.</i>
 </p>
       <!-- Add more content here if needed -->
     </div>
