--- a/public/index.html
+++ b/public/index.html
@@ -2158,7 +2158,7 @@ document.addEventListener('DOMContentLoaded', function () {
         
         videos.forEach(function(video) {
             // Remove autoplay attribute
-            video.removeAttribute('autoplay');
+            // video.removeAttribute('autoplay');
             
             // Add event listeners to prevent fullscreen mode
             video.addEventListener('fullscreenchange', function() {
