--- a/public/index.html
+++ b/public/index.html
@@ -1473,15 +1473,19 @@ la libertad. La falsedad del esquema no está oculta (si no existiría el riesgo
       <div class="guia"><a href="#ametralladora"><p>Texto</p></a><p style="text-decoration: underline !important;">Técnicas</p></div>
       <!--<br>-->
       <!--<hr>-->
-      <br><img class="lazyload" src="assets/img/47_vicios/01.jpg" alt="Image 1">
+      <br><p><b>Slots</b></p>
+       <img class="lazyload" src="assets/img/47_vicios/01.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/47_vicios/02.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/47_vicios/03.jpg" alt="Image 1">
+       <p><b>Kermesse</b></p>
        <img class="lazyload" src="assets/img/47_vicios/04.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/47_vicios/05.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/47_vicios/06.jpg" alt="Image 1">
+       <p><b>Billares</b></p>
        <img class="lazyload" src="assets/img/47_vicios/07.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/47_vicios/08.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/47_vicios/09.jpg" alt="Image 1">
+       <p><b>Arcade</b></p>
        <img class="lazyload" src="assets/img/47_vicios/10.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/47_vicios/11.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/47_vicios/12.jpg" alt="Image 1">
