--- a/public/index.html
+++ b/public/index.html
@@ -973,7 +973,7 @@ shaping spatial <u>profusion</u>.</p>
       <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p><a href="#casaERCP2">Dibujos</a></p><p><a href="#casaERCP3">Fotografías x F.S.</a></p></div>
       <!--<br>-->
       <!--<hr>-->
-      <p>Edificios Mundo despliega las capacidades intrínsecas de los edificios públicos urbanos de mediana escala para constituir mun dos que proponen espacios - tiempo alternativos dentro de la ciudad que les da sentido. Interiorizando las lógicas urbanas que los determinan, y sedimentándolas en formas de órdenes materiales, los Edificios Mundo definen espacios de encuentro público capaces de art icular una diversidad de formas de vida. Se analizarán casos contemporáneos ejemplares para extraer sistemas estructurales, regímenes de circulación, distribuciones de usos, performances de las envolventes y relaciones contextuales, con el objetivo de proy ectar espacios de ocio comunitar- io. Supliendo el déficit de espacios recreativos públicos cubiertos y semi-cubiertos de la ciudad e integrando usos heterogéneos a escala inter barrial, los Edificios Mundo establecerán sus reglas espaciales internas de modo de propiciar formas colectivas impersonales de agrupación en el futuro parque situ- ado sobre la franja perimetral del Golf Municipal de la Ciudad. Sus cualidades topográficas y paisajísti cas y su tamaño y ubicación tienen el potencial de convertirlo, junto con la infraestructura edilicia adec- uada, en un parque de escala y uso metropolitano paradigmático para la ciudad.
+      <p>Edificios Mundo despliega las capacidades intrínsecas de los edificios públicos urbanos de mediana escala para constituir mun dos que proponen espacios - tiempo alternativos dentro de la ciudad que les da sentido. Interiorizando las lógicas urbanas que los determinan, y sedimentándolas en formas de órdenes materiales, los Edificios Mundo definen espacios de encuentro público capaces de articular una diversidad de formas de vida. Se analizarán casos contemporáneos ejemplares para extraer sistemas estructurales, regímenes de circulación, distribuciones de usos, performances de las envolventes y relaciones contextuales, con el objetivo de proyectar espacios de ocio comunitario. Supliendo el déficit de espacios recreativos públicos cubiertos y semi-cubiertos de la ciudad e integrando usos heterogéneos a escala inter barrial, los Edificios Mundo establecerán sus reglas espaciales internas de modo de propiciar formas colectivas impersonales de agrupación en el futuro parque situ- ado sobre la franja perimetral del Golf Municipal de la Ciudad. Sus cualidades topográficas y paisajísti cas y su tamaño y ubicación tienen el potencial de convertirlo, junto con la infraestructura edilicia adec- uada, en un parque de escala y uso metropolitano paradigmático para la ciudad.
         <br>
       <p>Profesores: Manuel Mensa, Máximo Sanchez Granel
         <br> Alumnos: Martín Achinelli, Gerónimo Amado Cattaneo, Milagros Ines Ares, Jorge Alejandro Barja Añez, Tiago Buceta, Luciano Nicolás Cichanowski, Iván Santiago Corach, Julia Delbes, Martina Kase, Joaquín Khoury, Valentina Luján Maldonado, Facundo Nahuel Manfredi Ortiz, Julieta Miguel, Francesca Moretti, Valentina Sofía Puente, Sofía Ramos, Lola Sadovsky, Chiara Luján Scaglione, José Luis Augusto Silva Teixeira, Lucia Tahmazian Hopson, Trinidad Ticinese, Tomás Vazquez Gonzalez, Pedro Zapata
@@ -1366,13 +1366,10 @@ New Abstraction in architecture will revive basic concepts of space which have o
       <br><img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/01.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/02.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/03.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/04.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/05.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/06.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/07.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/08.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/09.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/10.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/06.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/11.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/46_OMU=Uno/01_planos/12.jpg" alt="Image 1">
      
@@ -1508,7 +1505,8 @@ de ocho salas, mientras que su interior está fragmentado en nueve claustros de 
       <!--<br>-->
       <!--<hr>-->
       <p><b>Espacios de ocio vicioso</b>
-Gaming centers, agencias de loterìa, billares, arcades, salas de apues tas deportivas, salas de póker , tragamonedas, bingos y ferias de juegos son establecimientos comerciales en donde los vicios relacionados con el juego tienen el espacio que necesitan para desplegarse. Sus interiores persiguen el objetivo de maximizar la cantidad de tiempo que
+<br> 
+        Gaming centers, agencias de loterìa, billares, arcades, salas de apues tas deportivas, salas de póker , tragamonedas, bingos y ferias de juegos son establecimientos comerciales en donde los vicios relacionados con el juego tienen el espacio que necesitan para desplegarse. Sus interiores persiguen el objetivo de maximizar la cantidad de tiempo que
 se permanec e dentro de ellos de modo que la actividad lúdica, ligada en formas sorprendentemente creativas al azar, progresivamente se transforme en un loop infinito autodestructivo sin diferenc ias entre su principio y su final. Para conseguir este grado de permane ncia extremo, los interiores no imitan el exterior que pretenden reemplazar sino que lo mejoran: en vez de emulaciones figurativas de naturalezas salvajes (que a pesar de su artificialidad y domesticación dejan espacio para sospechar de potenciales, aunque ficcionales, peligros) la intemperie se sintetiza en luces de colores tenues, alfombras con efectos ópticos, sonidos repetitivos, cielorrasos de líneas quebradas, diferencias in- esperadas del nivel del piso, habitaciones dentro de habitaciones y carteles l uminosos que inducen el estado de trance necesario para perderse en un tiempo sin medidas.
       <br>
       <b>Intemperie</b>
