--- a/public/index.html
+++ b/public/index.html
@@ -450,9 +450,11 @@ Ritmo: Catalina Sfer Salas</p>
       <img loading="lazy" src="assets/img/09_casa gully_fotos/1.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/09_casa gully_fotos/2.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/09_casa gully_fotos/3.jpg" alt="Image 1">
+            <img loading="lazy" src="assets/img/09_casa gully_fotos/07.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/09_casa gully_fotos/4.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/09_casa gully_fotos/5.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/09_casa gully_fotos/6.jpg" alt="Image 1">
+            <img loading="lazy" src="assets/img/09_casa gully_fotos/08.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
